--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,44 +1,43 @@
-#landing-section{
-    background-image: url('/assets/bck-1.png');
-    background-position:bottom;
+#landing-section {
+    background-image: url("/assets/bg-1.png");
+    background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 30px;
+    background-size: 80%;
+    padding-top: 250px;
     position: relative;
-    z-index: -1;
+    z-index: 1;
     padding-bottom: 30px;
-    animation: landingback 4s infinite alternate;
+    /* animation: landingback 4s infinite alternate; */
 }
 
-
 @keyframes landingback {
-    0%{
-        transform:scale(1);
+    0% {
+        transform: scale(1);
         transform: translateY(15px);
         opacity: 1;
     }
-    30%{
+    30% {
         opacity: 1;
     }
-    100%{
-        transform:scale(1.1);
+    100% {
+        transform: scale(1.1);
         opacity: 1;
         transform: translateY(0);
         filter: drop-shadow(0 0 0.5rem #ffe75e);
     }
 }
 
-
-@keyframes dlor{
+@keyframes dlor {
     0% {
         filter: brightness(25%);
-      }
+    }
     100% {
         filter: brightness(100%);
     }
 }
 
-.dlor-logoblue{
+
+/* .dlor-logoblue {
     width: 400px;
     height: 400px;
     animation-name: dlor;
@@ -49,70 +48,87 @@
     animation-iteration-count: infinite;
     animation-fill-mode: none;
     animation-play-state: running; 
-}
+} */
 
-.text-land-1{
-    font-size: 30px;
-    transition: 2s;
+.text-land-1 {
+    font-size: 5vw;
+    transition: 1s;
+    margin-bottom: -30px;
 }
-.text-land-1:hover{
-    color: #3b8ca2;
-    transition: 0.5s;
+.c-text-land-1:hover {
+    color: whitesmoke;
+    transition: 1ms;
 }
-.text-land-2{
-    font-size: 20px;
-    transition: 2s;
+.text-land-2 {
+    font-size: 50px;
+    transition: 1s;
 }
-.text-land-2:hover{
-    color: #3b8ca2;
-    transition: 0.5s;
+.c-text-land-2:hover {
+    color: whitesmoke;
+    transition: 1ms;
 }
-.c-text-land-1{
-    margin-top: 10px;
+.c-text-land-1 {
+    margin-top: 0px;
 }
-.c-text-land-2{
+.c-text-land-2 {
     margin-top: 20px;
 }
 
-.landing-text-p{
+.landing-text-p {
+    color: #f9d098;
     padding: 0px;
+    z-index: 2;
 }
-.tagline{
+.tagline {
     font-style: italic;
-    font-size: 20px;  
+    font-size: 1.3vw;
 }
 
-@media only screen and (max-width:991px){
-    .dlor-logoblue{
+@media only screen and (max-width: 991px) {
+    .dlor-logoblue {
         width: auto;
         height: auto;
         filter: brightness(25%);
         transition: 0.5s;
-        
     }
-    .dlor-logoblue:hover{
+    .dlor-logoblue:hover {
         width: auto;
         height: auto;
         filter: brightness(100%);
         transition: 0.5s;
     }
-}
-
-@media only screen and (max-width:576px){
-    .landing-text-p{
-        padding-right:30px;
+    .landing-text-p {
+        padding-right: 30px;
         padding-left: 30px;
         padding-bottom: 20px;
     }
-    .tagline{
-        font-size: 15px;
-        font-style: italic;  
-    }
-    .text-land-1{
+    .tagline {
         font-size: 20px;
-        transition: 2s;
+        font-style: italic;
     }
-    .pad-top-about{
+    .text-land-1 {
+        font-size: 60px;
+        transition: 2s;
+        margin-bottom: -20px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .landing-text-p {
+        padding-right: 30px;
+        padding-left: 30px;
+        padding-bottom: 20px;
+    }
+    .tagline {
+        font-size: 15px;
+        font-style: italic;
+    }
+    .text-land-1 {
+        font-size: 30px;
+        transition: 2s;
+        margin-bottom: -7px;
+    }
+    .pad-top-about {
         padding-top: 25px;
     }
 }
