--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,75 +1,119 @@
-.dlor-navbar{
-    background-color: #67C0E0;
-    filter:drop-shadow(1px 2px 4px gray);
-    transition: 0.5s;
+.dlor-navbar {
+    height: 5vw;
+    /* background-color: transparent; */
+    filter: drop-shadow(2px 1px 2px gray);
+    transition: 0.2s;
+    z-index: 2;
 }
-.dlor-navbar:hover{
+/* .dlor-navbar:hover{
     background-color: #67C0E0;
     filter:drop-shadow(6px 6px 9px gray);
     transition:0.2s;
-}
-.navbar-collapse{
+} */
+.navbar-collapse {
     flex-grow: 0;
 }
 
+@keyframes hanging {
+    0% {
+        transform: translateX(-300%) translateY(-100%) rotate(0deg);
+    }
+    30% {
+        transform: translateX(-350%) translateY(-3%) rotate(20deg);
+    }
+    100% {
+        transform: translateX(-300%) translateY(-8%) rotate(-10deg);
+    }
+    /* 100%{
+        transform: translateX(-360%) translateY(1%) rotate(-10deg); 
+    } */
+}
+@keyframes fall {
+    0% {
+        transform: translate(-16vw, -10vw);
+    }
+    100% {
+        transform: translate(-16vw, 2.1vw);
+    }
+    /* 100%{
+        transform: translateX(-360%) translateY(1%) rotate(-10deg); 
+    } */
+}
+.monyet-img {
+    /* transform: translateX(-400%) translateY(1%);  */
+    animation: hanging 5s infinite alternate;
+}
+.leaf-img {
+    /* transform: translateX(-17%); */
+    animation: fall 2.2s;
+    transform: translate(-16vw, 2.1vw);
+}
+
 .nav-item-login {
-	background-color: #92D3EA;
-	border-radius: 10px;
-	transition: 0.5s;
+    background-color: #6e9850;
+    /* border-radius: 0px; */
+    transition: 0.2s;
+    margin-right: auto;
+    /* width: fit-content; */
+    height: fit-content;
 }
-.nav-item-login:hover{
-    background-color: #3b7d96;
-    color: whitesmoke;
-    border-radius: 15px;
+.nav-item-login:hover {
+    background-color: #f9d098;
+    color: #6e9850;
+    /* border-radius: 12px; */
     transition: 0.5s;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
-
-.dlor-logonav{
-    filter:brightness(0%) ;
+.dlor-logonav {
+    filter: brightness(0%);
     width: 50px;
     height: 50px;
     transition: 0.5s;
 }
-.dlor-logonav:hover{
-    filter:brightness(100%) ;
+.dlor-logonav:hover {
+    filter: brightness(100%);
     width: 50px;
     height: 50px;
     transition: 0.5s;
 }
-.dlor-navright{
+.dlor-navright {
     font-size: 20px;
 }
 
-.nav-link{
-    transition:100s;
-    color: black;
+.nav-link {
+    transition: 100s;
+    color: #f9d098;
 }
-.nav-item{
-    background-color: #67C0E0;
-    border-radius: 10px;
+.nav-item {
+    /* background-color: #67C0E0; */
+    /* border-radius: 10px; */
     transition: 0.5s;
 }
-.nav-item:hover{
+/* .nav-item:hover{
     background-color: #3b7d96;
     color: whitesmoke;
     border-radius: 15px;
     transition: 0.5s;
     padding: 10px;
+} */
+.nav-link {
+    color: #f9d098;
+    filter: drop-shadow(2px 2px 2px rgb(51, 51, 51));
+    transition: 0.2s;
 }
-.nav-link:hover{
-    color: whitesmoke;
+.nav-link:hover {
+    color: #6e9850;
+    filter: drop-shadow(2px 2px 2px gray);
+    transition: 0.2s;
 }
 
-
-
-@media only screen and (max-width:992px){
-    .dlor-navright{
-        font-size: 20px;
-        padding-right: 5px;
+@media only screen and (max-width: 992px) {
+    .dlor-navright {
+        font-size: 15px;
+        padding: 8px;
     }
-    .mobile-hide{
+    .mobile-hide {
         display: none;
     }
 }
