Add the new login page for caas + <login and navbar-ex>.css for style

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,65 +9,79 @@
     padding-right: 20px;
     margin: auto;
 }
-
+#landing-section {
+    background-image: url("/assets/bg-1.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    padding-top: 250px;
+    position: relative;
+    z-index: 1;
+    padding-bottom: 30px;
+    /* animation: landingback 4s infinite alternate; */
+}
 .mid-content{
     margin: auto;
 }
 
 .checker-box{
-    background-color: #FEB224;
-    width: 800px;
-    padding: 50px;
-    border-radius: 20px;
-    filter:drop-shadow(8px 8px 8px gray);
+    margin-left: 13vw;
+    transform: translateY(-9vw);
+    /* background-color: #FEB224; */
+    /* width: 800px; */
+    /* padding: 50px; */
+    /* border-radius: 20px; */
+    /* filter:drop-shadow(8px 8px 8px gray); */
 }
 
 .text-nim-head{
-    font-size: 30px;
-    font-weight: 700;
+    color: #f9d098;
+    font-size: 7vw;
+    /* font-weight: 900; */
 }
 
 .form-style{
+    /* outline: none; */
+    border-color: antiquewhite;
     border-radius: 15px;
     font-size: 30px;
     font-weight:600;
-    padding: 20px;
+    padding: 1.3vw;
     border-style:solid;
     text-align: center;
-    background-color: antiquewhite;
+    background-color: rgb(250, 235, 215);
     transition: 0.5s;
 }
 .form-style:hover{
-    border-radius: 15px;
-    font-size: 30px;
     color: antiquewhite;
     font-weight:600;
-    padding: 20px;
-    border-style:solid;
-    text-align: center;
-    background-color: #FEB224;
+    /* padding: 20px; */
+    border-color: rgb(253, 206, 144);
+    background-color: rgb(253, 206, 144);
     transition: 0.5s;
 }
 
 .form-style-submit{
+    color: aliceblue;
+    border: none;
     border-radius: 15px;
     font-size: 30px;
     font-weight:600;
     padding: 15px;
-    border-style:solid;
     text-align: center;
-    background-color: antiquewhite;
+    background-color: #6e9850;
     transition: 0.5s;
 }
 .form-style-submit:hover{
+
+    border: none;
     border-radius: 15px;
     font-size: 30px;
     color: aliceblue;
     font-weight:600;
-    padding: 20px;
-    border-style:solid;
+    /* padding: 20px; */
     text-align: center;
-    background-color: rgb(58, 207, 58);
+    background-color: #56753f;
     transition: 0.5s;
 }
 
