--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -7,7 +7,6 @@
     position: relative;
     z-index: 1;
     padding-bottom: 30px;
-    /* animation: landingback 4s infinite alternate; */
 }
 
 @keyframes landingback {
@@ -35,20 +34,6 @@
         filter: brightness(100%);
     }
 }
-
-
-/* .dlor-logoblue {
-    width: 400px;
-    height: 400px;
-    animation-name: dlor;
-    animation-duration: 4s;
-    animation-timing-function: ease-out; 
-    animation-delay: 0s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-fill-mode: none;
-    animation-play-state: running; 
-} */
 
 .text-land-1 {
     font-size: 5vw;
@@ -85,17 +70,10 @@
 }
 
 @media only screen and (max-width: 991px) {
-    .dlor-logoblue {
-        width: auto;
-        height: auto;
-        filter: brightness(25%);
-        transition: 0.5s;
-    }
-    .dlor-logoblue:hover {
-        width: auto;
-        height: auto;
-        filter: brightness(100%);
-        transition: 0.5s;
+    #landing-section {
+        background-size: 190%;
+        background-position:-53vw;
+        padding-top: 250px;
     }
     .landing-text-p {
         padding-right: 30px;
@@ -114,21 +92,22 @@
 }
 
 @media only screen and (max-width: 576px) {
+    #landing-section {
+        padding-top: 150px;
+    }
     .landing-text-p {
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 20px;
+        padding-right: 2vw;
     }
     .tagline {
         font-size: 15px;
         font-style: italic;
     }
     .text-land-1 {
-        font-size: 30px;
+        font-size: 12vw;
         transition: 2s;
         margin-bottom: -7px;
     }
     .pad-top-about {
-        padding-top: 25px;
+        padding-top: 5vw;
     }
 }
