--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,15 +1,9 @@
 .dlor-navbar {
     height: 5vw;
-    /* background-color: transparent; */
     filter: drop-shadow(2px 1px 2px gray);
     transition: 0.2s;
     z-index: 2;
 }
-/* .dlor-navbar:hover{
-    background-color: #67C0E0;
-    filter:drop-shadow(6px 6px 9px gray);
-    transition:0.2s;
-} */
 .navbar-collapse {
     flex-grow: 0;
 }
@@ -24,9 +18,6 @@
     100% {
         transform: translateX(-300%) translateY(-8%) rotate(-10deg);
     }
-    /* 100%{
-        transform: translateX(-360%) translateY(1%) rotate(-10deg); 
-    } */
 }
 @keyframes fall {
     0% {
@@ -35,34 +26,24 @@
     100% {
         transform: translate(-16vw, 2.1vw);
     }
-    /* 100%{
-        transform: translateX(-360%) translateY(1%) rotate(-10deg); 
-    } */
 }
 .monyet-img {
-    /* transform: translateX(-400%) translateY(1%);  */
     animation: hanging 5s infinite alternate;
 }
 .leaf-img {
-    /* transform: translateX(-17%); */
     animation: fall 2.2s;
     transform: translate(-16vw, 2.1vw);
 }
 
 .nav-item-login {
     background-color: #6e9850;
-    /* border-radius: 0px; */
     transition: 0.2s;
-    margin-right: auto;
-    /* width: fit-content; */
-    height: fit-content;
+    padding-inline: 1vw;
 }
 .nav-item-login:hover {
     background-color: #f9d098;
     color: #6e9850;
-    /* border-radius: 12px; */
     transition: 0.5s;
-    /* padding: 10px; */
 }
 
 .dlor-logonav {
@@ -86,17 +67,9 @@
     color: #f9d098;
 }
 .nav-item {
-    /* background-color: #67C0E0; */
-    /* border-radius: 10px; */
     transition: 0.5s;
 }
-/* .nav-item:hover{
-    background-color: #3b7d96;
-    color: whitesmoke;
-    border-radius: 15px;
-    transition: 0.5s;
-    padding: 10px;
-} */
+
 .nav-link {
     color: #f9d098;
     filter: drop-shadow(2px 2px 2px rgb(51, 51, 51));
@@ -110,10 +83,42 @@
 
 @media only screen and (max-width: 992px) {
     .dlor-navright {
+        font-size: 2vw;
+        padding: 2vw;
+    }
+    .nav-item-login {
+        padding-inline: 2vw;
+    }
+    @keyframes hanging {
+        0% {
+            transform: translateX(170%) translateY(-40%) rotate(20deg);
+        }
+        100% {
+            transform: translateX(170%) translateY(-40%) rotate(-10deg);
+        }
+    }
+    .monyet-img {
+        animation: hanging 3s;
+        transform: translateX(170%) translateY(-40%) rotate(-10deg);
+        width: 25%;
+    }
+    @keyframes fall {
+        0% {
+            transform: translate(-200vw, 0vw);
+        }
+        100% {
+            transform: translate(-70vw, -20px);
+        }
+    }
+    .leaf-img {
+        animation: fall 2.2s;
+        transform: translate(-70vw, -20px);
+        width: 150%;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .dlor-navright {
         font-size: 15px;
         padding: 8px;
-    }
-    .mobile-hide {
-        display: none;
     }
 }
