--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -83,11 +83,12 @@
 
 @media only screen and (max-width: 992px) {
     .dlor-navright {
-        font-size: 2vw;
+        font-size: 2.5vw;
         padding: 2vw;
     }
     .nav-item-login {
-        padding-inline: 2vw;
+        padding-inline: 2.5vw;
+        padding-block: 0.5vw ;
     }
     @keyframes hanging {
         0% {
