Change Admin View

--- a/public/assets/color-note.css
+++ b/public/assets/color-note.css
@@ -4,4 +4,9 @@
 .secondary-color{
     color: #f9d098;
     color: #6e9850;
+    colof: #ffecc6;
+    colof: #bd3838;
+    colof: #218921;
+    colof: #8DD1C0;
+    colof: #FF1212;
 }
