--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -1,13 +1,10 @@
 #main-nim{
-    background-image: url('/assets/bck-1.png');
-    background-position:bottom;
+    background-position:top;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 80%;
     padding-top: 50px;
-    padding-bottom: 80px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: auto;
+    padding-bottom: -150px;
+    z-index: 1;
 }
 
 .mid-content{
@@ -15,14 +12,16 @@
 }
 
 .checker-box {
-	background-color: #FFD17A;
+	background-color: #6e9850;
 	width: 800px;
 	padding: 50px;
+    margin-top: 1.5vw;
 	border-radius: 20px;
-	filter: drop-shadow(8px 8px 8px gray);
+	filter: drop-shadow(2px 2px 2px rgb(51, 51, 51));
 }
 
 .text-nim-head{
+    color: #f9d098;
     font-size: 30px;
     font-weight: 700;
 }
