--- a/public/css/form-style.css
+++ b/public/css/form-style.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     width: 100%;
     pointer-events: auto;
-    background-color: #67C0E0;
+    background-color: #6e9850;
     background-clip: padding-box;
     border: 1px solid rgba(0,0,0,.2);
     border-radius: .8rem;
@@ -13,11 +13,19 @@
 }
 
 .shadow{
-	filter:drop-shadow(8px 8px 8px rgb(9, 110, 156));
+	filter: drop-shadow(2px 2px 2px rgb(51, 51, 51));
 }
 
 #EditBackColor{
-	background-color: #ffecc6;
+	background-color: #2c4d16;
+}
+
+.text-admin-warning{
+    filter: drop-shadow(2px 2px 2px rgb(100, 100, 100));
+    font-style: italic;
+    color:#FF1212;
+    font-weight:700;
+    font-size:25px;
 }
 
 .rec-title{
@@ -53,7 +61,7 @@
 	font-weight: 500;
 	line-height: 1.5;
 	color: black;
-	background-color: #99ddff;
+	background-color: rgb(255, 199, 87);
 	background-clip: padding-box;
 	border: none;
     transition: 0.5s;
@@ -90,7 +98,7 @@
 	font-weight: 400;
 	line-height: 1.5;
 	color: #000;
-	background-color: #a8e2ff;
+	background-color: #ffecc6;
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
 	background-repeat: no-repeat;
 	background-position: right .75rem center;
@@ -109,18 +117,13 @@
     padding: 15px;
     border-style:none;
     text-align: center;
+    color: aliceblue;
     background-color: rgb(58, 207, 58);
     transition: 0.5s;
 }
 .button-submit:hover{
-    border-radius: 15px;
-    font-size: 15px;
-    color: aliceblue;
-    font-weight:600;
-    padding: 20px;
-    border-style:solid;
     text-align: center;
-    background-color: rgb(26, 182, 26);
+    background-color: #218921;
     transition: 0.5s;
 }
 
@@ -132,18 +135,13 @@
 	color: whitesmoke;
     border-style:none;
     text-align: center;
-    background-color: #fc3939;
+    background-color: #bd3838;
     transition: 0.5s;
 }
 .button-cancel:hover{
-    border-radius: 15px;
-    font-size: 15px;
     color: aliceblue;
-    font-weight:600;
-    padding: 20px;
-    border-style:solid;
     text-align: center;
-    background-color: rgb(245, 37, 37);
+    background-color: #872828;
     transition: 0.5s;
 }
 
@@ -152,18 +150,11 @@
     font-size: 20px;
     font-weight:600;
     padding: 15px;
-    border-style:solid;
     text-align: center;
     background-color: antiquewhite;
     transition: 0.5s;
 }
 .form-style-find:hover{
-    border-radius: 15px;
-    font-size: 20px;
-    color: antiquewhite;
-    font-weight:600;
-    padding: 15px;
-    border-style:solid;
     text-align: center;
     background-color: #FEB224;
     transition: 0.5s;
@@ -174,20 +165,15 @@
     font-size: 20px;
     font-weight:600;
     padding: 15px;
-    border-style:solid;
+    border-style:none;
     text-align: center;
     background-color: rgb(125, 238, 97);
     transition: 0.5s;
 }
 .button-submit-find:hover{
-    border-radius: 15px;
-    font-size: 20px;
     color: antiquewhite;
-    font-weight:600;
-    padding: 15px;
-    border-style:solid;
     text-align: center;
-    background-color: #FEB224;
+    background-color: #218921;
     transition: 0.5s;
 }
 
