--- a/public/assets/color-note.css
+++ b/public/assets/color-note.css
@@ -4,9 +4,9 @@
 .secondary-color{
     color: #f9d098;
     color: #6e9850;
-    colof: #ffecc6;
-    colof: #bd3838;
-    colof: #218921;
-    colof: #8DD1C0;
-    colof: #FF1212;
+    color: #ffecc6;
+    color: #bd3838;
+    color: #218921;
+    color: #8DD1C0;
+    color: #FF1212;
 }
