- Remove unnecessary comments from NavbarAdmin - Remove unnecessary comments from adminHome - Shift Update View - Remove unnecessary comments from Home - Add Navbar to DelShift - Edit resultplot Styles - EditCaasAccount (Add Navbar, Remove Unecessary Comment) - Add Navbar to delcaas - CaasAccount (Remove Comment, Edit Styles) - Edit form-style.css - Delete list.css File - Edit README.md

--- a/public/css/form-style.css
+++ b/public/css/form-style.css
@@ -160,10 +160,21 @@
     transition: 0.5s;
 }
 
+.table-content-shift{
+    color:black;
+    font-weight:700;
+}
+
+#table-backgrounds{
+    background-color:#f1b442;
+}
+
 .button-submit-find{
     border-radius: 15px;
-    font-size: 20px;
+    font-size: 17px;
     font-weight:600;
+    margin-block: 5px ;
+    width: 150px;
     padding: 15px;
     border-style:none;
     text-align: center;
