--- a/public/css/form-style.css
+++ b/public/css/form-style.css
@@ -190,8 +190,15 @@
 }
 
 @media only screen and (max-width:991px){
+    .modal-background{
+        margin-top: 20vw;
+    }
     .sbmt-btn-margin{
         margin-left: 0;
         margin-top: 0.5rem;
+    }
+
+    .button-submit-find{
+        width:max-content;
     }
 }
