UI for CaAs Account

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,16 +1,46 @@
-.Welcome-text{
+.Welcome-text-title {
+    margin-bottom: -10px;
+    font-size: 50px;
+    color: #f9d098;
+}
+.Welcome-text {
     font-size: 30px;
+    color: #f9d098;
 }
 
 .Welcome-text-semibold {
-	font-size: 30px;
-	font-weight: 650;
+    font-size: 30px;
+    font-weight: 650;
 }
 
-.menu-box-home{
+.menu-box-home-admin {
     padding: 25px;
 }
-.home-button{
+.home-button {
+    background-color: #feb224;
+    padding-inline: 3vw;
+    padding-block: 1.7vw;
+    width: 30vw;
+    border-radius: 10px;
+    display: inline;
+    border-style: none;
+    transition: 0.5s;
+    font-size: 27px;
+}
+
+.home-button:hover {
+    background-color: #fceed4;
+    font-weight: 600;
+}
+.return-button {
+    background-color: #ff4e4e;
+    color: whitesmoke;
+}
+.return-button:hover {
+    background-color: #a13030;
+}
+
+.home-button-admin {
     background-color: #feb224;
     padding: 5px;
     width: 200px;
@@ -20,49 +50,39 @@
     transition: 0.5s;
     font-size: 20px;
 }
-.home-button:hover{
-    background-color: #fceed4;
-    padding: 0px;
-    width: 210px;
-    border-radius: 25px;
-    display: inline;
-    border-style: none;
-    transition: 0.5s;
-    font-size: 18px;
-    font-weight: 600;
-}
-.tagline-home{
+
+.tagline-home {
     font-style: italic;
     font-size: 20px;
-    color:#197c8c;
+    color: #f9d098;
     font-weight: 600;
 }
-
-@media only screen and (max-width:576px){
-    .Welcome-text{
+@media only screen and (max-width: 992px) {
+    .mobile-hide {
+        display: none;
+    }
+    .home-button {
+        width: 60vw;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .Welcome-text {
         font-size: 20px;
     }
     .Welcome-text-semibold {
         font-size: 20px;
         font-weight: 600;
     }
-    .tagline-home{
+    .tagline-home {
         font-style: italic;
         font-size: 15px;
-        color:#197c8c;
+        color: #197c8c;
         font-weight: 600;
     }
-    .home-button{
-        background-color: #feb224;
-        padding: 0px;
-        width: 150px;
-        border-radius: 35px;
-        display: inline;
-        border-style: none;
-        transition: 0.5s;
-        font-size: 15px;
+    .home-button {
+        width: 70vw;
     }
-    .home-button:hover{
+    .home-button:hover {
         background-color: #fceed4;
         padding: 0px;
         width: 170px;
@@ -75,16 +95,8 @@
     }
 }
 
-.dlor-logo-announce{
-    filter:brightness(0%) ;
+.dlor-logo-announce {
     width: 150px;
     height: 150px;
-    transition: 0.5s;
-}
-
-.dlor-logo-announce:hover{
-    filter:brightness(100%) ;
-    width: 170px;
-    height: 170px;
     transition: 0.5s;
 }
