--- a/public/assets/color-note.css
+++ b/public/assets/color-note.css
@@ -3,5 +3,15 @@
 }
 .secondary-color{
     color: #f9d098;
+    color: #ffecc6;
     color: #6e9850;
+    color: #57773f;
+    color: #218921;
+    color: #4c0f07;
+    color: #bd3838;
+    color: #FF1212;
+    color: #8DD1C0;
 }
+/* @include('layouts/navbarCaasLogout')
+@section('navcaaslogout')
+@endsection */
