remove unnecessary comment (again)

--- a/public/css/form-style.css
+++ b/public/css/form-style.css
@@ -173,7 +173,7 @@
     font-weight:600;
     padding: 15px;
     border-style:none;
-=======
+}
 
 .form-style-find:hover {
     text-align: center;
