--- a/public/css/login-caas-menu.css
+++ b/public/css/login-caas-menu.css
@@ -19,7 +19,7 @@
 
 .checker-box {
     background-color: #6e9850;
-    width: 800px;
+    width: 43vw;
     padding: 20px;
     border-radius: 20px;
     filter: drop-shadow(2px 1px 2px gray);
